# AIC-III

./: .gitignore  Guardar.html  README.md  app.py  dados.csv  dadosin.csv  dashboards.py  index.html  orders.js  pyproject.toml  requirements.txt  style.css
dashboards/: dados.csv  dashboards.py
src/: servidor.js
src/sophia/: __init__.py  views.py
src/sophia/data/: dadosout.csv
src/sophia/static/css/: style.css
src/sophia/static/js/: servidor.js
src/sophia/templates/: guardar.html  index.html  login.html  relatorios.html
templates/: login.html  relatorios.html  style.css
utils/: dashboards.py
